update biodata and style sheet

--- a/biodata.html
+++ b/biodata.html
@@ -22,7 +22,7 @@
             <h2>Personal Information</h2>
             <ul>
                 <li><strong>Full Name:</strong> [Diler Singh Yadav]</li>
-                <li><strong>Date of Birth:</strong> [29-09-2004]</li>
+                <li><strong>Date of Birth:</strong> [23-10-2003]</li>
                 <li><strong>Gender:</strong> [male]</li>
                 <li><strong>Nationality:</strong> [Indian]</li>
             </ul>
@@ -40,17 +40,17 @@
         <section>
             <h2>Family Details</h2>
             <ul>
-                <li><strong>Father's Name:</strong> [Manjunath Nayak]</li>
-                <li><strong>Mother's Name:</strong> [Radha Nayak]</li>
-                <li><strong>Siblings:</strong> [Rakshita]</li>
+                <li><strong>Father's Name:</strong> [Shiv Kumar Shiva]</li>
+                <li><strong>Mother's Name:</strong> [Rekha Devi]</li>
+                <li><strong>Siblings:</strong> [Sweta]</li>
             </ul>
         </section>
 
         <section>
             <h2>Hobbies</h2>
             <ul>
-                <li>[DANCE]</li>
-                <li>[DRAWING]</li>
+                <li>[Chess]</li>
+                <li>[sleep]</li>
             </ul>
         </section>
 
@@ -59,15 +59,11 @@
             <ul>
                 <li>[English]</li>
                 <li>[Hindi]</li>
+                <li>[Punjabi]</li>
+                <li>[Matheli]</li>
             </ul>
         </section>
 
-        <section>
-            <h2>Declaration</h2>
-            <p1>
-                I hereby declare that the information provided above is true and accurate to the best of my knowledge and belief.
-            </p1>
-        </section>
 
         <footer>
             <p>© 2024 Diler Singh Yadav. All rights reserved.</p>
