--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             </ul>
         </nav>
     </header>
-    <p>CHECK OUT THE RESUME AND BIODATA</p>
+    <p> Check Resume and Biodata </p>
 </body>
 </html>
