--- a/resume.html
+++ b/resume.html
@@ -13,13 +13,12 @@
     </header>
     <section>
         <h2>Education</h2>
-        <p1> HIGHSCHOOL :<br> Graduted from:M.E.M.HIGHSCHOOL,NELAGUNI,GOKARNA.<br>Graduated year:2020<br>Result:96.32%.</p1>
-        <p1> PUC :<br> Graduted from:Saraswati P U College,Kumta<br>Graduated year:2022<br>Result:98.33%.<br>Major:Science[PCMB]</p1>
+        <p1> School :<br> JNV Madhepura</p1>
         <p1> DEGREE :<br> Degree:Bachelors Of engineering[B.E]<br>Major:Computer SCience<br>Graduating year:2026</p1>
     </section>
     <section>
         <h2>Skills</h2>
-        <p1>Comfortable with languages like python ,C<br>Familiar with web develpoment and completed a project called"recipe finder"<br>Completd a course in Cloud computing<br>Have experience in working with datsets as i worked on Hospital management Project</p1>
+       <p1>Full stack <br>c <br>Java <br> python</p1>
     </section>
 </body>
 </html>
